--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "inspector",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://jesusvaz.github.io/inspector",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -15,6 +16,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
